--- a/css/main.css
+++ b/css/main.css
@@ -24,9 +24,39 @@ body, html {
 		display: flex;
 		flex-direction: column;
 	}
+
+	nav {
+		display: none;
+	}
+
+	.challenge-3 img {
+		position: center;
+		height: 240px;
+		width: 280px;
+	}
+	.pain-point-3 img {
+		position: center;
+		height: 240px;
+		width: 260px;
+	}
+
 	iframe {
-		width: 320px;
-		height: 200px;
+		width: 340px;
+		height: 340px;
+	}
+	.takeaway {
+		max-height: 400px;
+	}
+	.takeaway h3 {
+		font-size: 18px;
+	}
+	.takeaway p {
+		font-size: 12px;
+	}
+
+	.footer li a {
+		font-size: 10px;
+		padding: 10px;
 	}
 	
 }
@@ -63,13 +93,13 @@ p, div li {
 	border: 4px #9e0000 solid;
 }
 
-.challenge-3 .support {
+/*.challenge-3 .support {
 	background: url("../images/lbs-original-images@3x.png");
 	background-position: center;
   	background-repeat: no-repeat;
   	background-size: contain;
   	position: relative;
-}
+}*/
 
 .icons {
 	display: flex;
@@ -87,18 +117,17 @@ figcaption {
 }
 
 .pain-point-2 .support img {
-	height: 50%;
-	width: 70%;
-	position: center;
+	height: 100%;
+	width: 100%;
 }
 
-.pain-point-3 .support {
+/*.pain-point-3 .support {
 	background: url("../images/user-interview-quotes@3x.png");
 	background-position: center;
   	background-repeat: no-repeat;
   	background-size: contain;
   	position: relative;
-}
+}*/
 
 .design-3 .support img, .design-4 .support img, .design-5 .support img {
 	height: 100%;
@@ -175,6 +204,9 @@ figcaption {
 	flex-basis: 50%;
 }
 
+.pain-point-3 .pp3 {
+	padding: 10% 0;
+}
 
 .pp3 {
 	flex-basis: 50%;
@@ -184,9 +216,38 @@ figcaption {
 	flex-basis: 50%;
 }
 
+.support figcaption {
+	text-align: center;
+	color: #30323d;
+}
 
 nav {
-	padding-left: 40%;
+	width: 100%;
+	height: 100%;
+	color: #000;
+	line-height: 20px;
+}
+
+/*nav img {
+	margin-top: 10px;
+	margin-left: 30px;
+}*/
+
+nav ul {
+	float: right;
+	margin-right: 30px;
+}
+
+nav ul li {
+	display: inline-block;
+	list-style-type: none;
+	padding: 20px;
+
+}
+
+nav a {
+	text-decoration: none;
+	color: #1e1e24;
 }
 
 nav a, .footer a {
