--- a/css/hero.css
+++ b/css/hero.css
@@ -91,7 +91,7 @@ body, html {
 nav {
 	width: 100%;
 	height: 100%;
-	color: #000;
+	color: #e90000;
 	line-height: 20px;
 }
 
@@ -99,6 +99,7 @@ nav img {
 	margin-top: 10px;
 	margin-left: 30px;
 }
+
 
 nav ul {
 	float: right;
