--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,10 @@ body, html {
  /*margin-top: 20px;*/
  margin-bottom: 20px;
 }
+
+.container .navbar {
+	padding-left: 18%;
+}
 }
 
 @media(max-width: 768px){
@@ -25,24 +29,38 @@ body, html {
 		flex-direction: column;
 	}
 
-	nav {
-		display: none;
-	}
+	.navbar a:not(:first-child) {display: none;}
+  	.navbar a.icon {
+    float: right;
+    display: block;
+  	}
+
+  	.navbar.responsive a.icon {
+    	position: absolute;
+    	right: 0;
+    	bottom: 0;
+  	}
+  	.navbar.responsive a {
+    	float: none;
+    	display: block;
+    	text-align: left;
+ 	 }
 
 	.challenge-3 img {
 		position: center;
-		height: 240px;
-		width: 280px;
+		height: auto;
+		width: auto;
 	}
+
 	.pain-point-3 img {
 		position: center;
-		height: 240px;
-		width: 260px;
+		height: auto;
+		width: auto;
 	}
 
 	iframe {
-		width: 340px;
-		height: 340px;
+		max-width: 100%;
+  		height: auto;
 	}
 	.takeaway {
 		max-height: 400px;
@@ -53,16 +71,26 @@ body, html {
 	.takeaway p {
 		font-size: 12px;
 	}
-
-	.footer li a {
-		font-size: 10px;
-		padding: 10px;
+	/*.container .navbar {
+	padding-right: 300px;
+}*/
+	header img, header nav, .linus img, .linus nav {
+		display: none;
 	}
-	
+
 }
 
 header {
 	background: url("../images/lbs-hp-mockup.jpg");
+	background-position: center;
+  	background-repeat: no-repeat;
+  	background-size: cover;
+  	position: relative;
+  	height: 70%;
+  }
+
+.linus {
+	background: url("../images/linus-hero-mockup@3x.png");
 	background-position: center;
   	background-repeat: no-repeat;
   	background-size: cover;
@@ -79,7 +107,7 @@ h1, h2, h3, h4, h5 {
 	font-weight: 400;
 }
 
-p, div li {
+p, div li, .navbar {
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 300;
 }
@@ -114,6 +142,12 @@ p, div li {
 
 figcaption { 
   display: block;
+}
+
+.challenge-3 figcaption { 
+  display: block;
+  float: center;
+  padding-right: 60%;
 }
 
 .pain-point-2 .support img {
@@ -179,6 +213,10 @@ figcaption {
 	flex-basis: 50%;
 }
 
+.challenge-3 .challenge-info {
+	flex-basis: 100%;
+}
+
 .intro div, .challenge-2 div, .pain-point-2 div, .design-2 div, .takeaway {
 	padding-left: 17%;
 	padding-right: 17%;
@@ -224,7 +262,7 @@ figcaption {
 nav {
 	width: 100%;
 	height: 100%;
-	color: #000;
+	color: #e90000;
 	line-height: 20px;
 }
 
@@ -233,36 +271,27 @@ nav {
 	margin-left: 30px;
 }*/
 
+
 nav ul {
 	float: right;
-	margin-right: 30px;
+	margin-right: 70px;
 }
 
 nav ul li {
 	display: inline-block;
 	list-style-type: none;
-	padding: 20px;
+	padding: 0 20px;
 
 }
 
 nav a {
+	font-family: 'Montserrat', sans-serif;
 	text-decoration: none;
-	color: #1e1e24;
+	color: #30323d;
 }
 
-nav a, .footer a {
-	text-decoration: none;
-	color: #000000;
-	font-size: 20px;
-}
-
-nav li, .footer li {
-	display: inline-flex;
-	padding: 0 20px;
-}
-
-.footer {
-	text-align: center;
+nav a span {
+	color: #ebe9e9;
 }
 
 li {
@@ -277,4 +306,48 @@ li {
 	margin-bottom: 0;
 }
 
+.responsive {
+  max-width: 100%;
+  height: auto;
+}
+
+/*.container .navbar {
+	padding-left: 19%;
+}*/
+
+.navbar {
+	background-color: #ebe9e9;
+	overflow: hidden;
+	position: relative;
+	bottom: 0;
+	width: 100%;
+}
+
+.navbar a {
+	float: left;
+  	display: block;
+  	color: #30323d;
+  	text-align: center;
+  	justify-content: center;
+  	padding: 14px 16px;
+  	text-decoration: none;
+  	font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.navbar a:hover {
+	background-color: #ddd;
+	color: #30323d;
+}
+
+/* Add a background color to the active link */
+.navbar a.active {
+	background-color: #e90000;
+	color: #ebe9e9;
+}
+
+/* Hide the link that should open and close the navbar on small screens */
+.navbar .icon {
+  	display: none;
+}
 
