--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,7 @@ body, html {
   	.navbar a.icon {
     float: right;
     display: block;
+    /*padding-right: 40px;*/
   	}
 
   	.navbar.responsive a.icon {
@@ -71,9 +72,7 @@ body, html {
 	.takeaway p {
 		font-size: 12px;
 	}
-	/*.container .navbar {
-	padding-right: 300px;
-}*/
+
 	header img, header nav, .linus img, .linus nav {
 		display: none;
 	}
@@ -105,6 +104,7 @@ header {
 h1, h2, h3, h4, h5 {
 	font-family: 'Volkhov', serif;
 	font-weight: 400;
+	text-align: center;
 }
 
 p, div li, .navbar {
@@ -117,9 +117,9 @@ p, div li, .navbar {
 	border: 2px #30323d solid;
 }
 
-.pain-point div {
+/*.pain-point div {
 	border: 4px #9e0000 solid;
-}
+}*/
 
 /*.challenge-3 .support {
 	background: url("../images/lbs-original-images@3x.png");
@@ -128,6 +128,7 @@ p, div li, .navbar {
   	background-size: contain;
   	position: relative;
 }*/
+
 
 .icons {
 	display: flex;
@@ -139,10 +140,16 @@ p, div li, .navbar {
 	width: 52px;
 }
 
-
-figcaption { 
-  display: block;
+.icons .icon-1 {
+	padding-right: 20px;
+	padding-left: 50px;
 }
+
+
+/*figcaption { 
+  display: block;
+  text-align: center;
+}*/
 
 .challenge-3 figcaption { 
   display: block;
@@ -150,10 +157,10 @@ figcaption {
   padding-right: 60%;
 }
 
-.pain-point-2 .support img {
+/*.pain-point-2 .support img {
 	height: 100%;
 	width: 100%;
-}
+}*/
 
 /*.pain-point-3 .support {
 	background: url("../images/user-interview-quotes@3x.png");
@@ -213,9 +220,6 @@ figcaption {
 	flex-basis: 50%;
 }
 
-.challenge-3 .challenge-info {
-	flex-basis: 100%;
-}
 
 .intro div, .challenge-2 div, .pain-point-2 div, .design-2 div, .takeaway {
 	padding-left: 17%;
@@ -242,9 +246,9 @@ figcaption {
 	flex-basis: 50%;
 }
 
-.pain-point-3 .pp3 {
+/*.pain-point-3 .pp3 {
 	padding: 10% 0;
-}
+}*/
 
 .pp3 {
 	flex-basis: 50%;
@@ -255,8 +259,28 @@ figcaption {
 }
 
 .support figcaption {
+	display: block;
 	text-align: center;
 	color: #30323d;
+}
+
+.call-text {
+	font-size: 18px;
+}
+
+.pain-point-3 .support {
+	text-align: center;
+	padding: 5% 0;
+}
+
+.quotes-1 {
+	font-size: 36px;
+	color: #006837;
+}
+
+.quotes-2 {
+	font-size: 36px;
+	color: #94b0da;
 }
 
 nav {
@@ -311,9 +335,9 @@ li {
   height: auto;
 }
 
-/*.container .navbar {
-	padding-left: 19%;
-}*/
+*.container .navbar {
+	padding-left: 12%;
+}*
 
 .navbar {
 	background-color: #ebe9e9;
