--- a/css/artifacts.css
+++ b/css/artifacts.css
@@ -55,9 +55,9 @@ nav a {
   font-size: 18px;
 }
 
-div {
+/*div {
   border: 2px #000000 solid;
-}
+}*/
 
 .container {
   display: flex;
@@ -73,4 +73,66 @@ div {
 
 .collage-2 {
   flex-basis: 50%;
+}
+
+.navbar {
+  background-color: #30323d;
+  overflow: hidden;
+  position: relative;
+  bottom: 0;
+}
+
+.navbar a {
+    float: left;
+    display: block;
+    color: #ebe9e9;
+    text-align: center;
+    justify-content: center;
+    padding: 14px 55px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.navbar a:hover {
+  background-color: #ddd;
+  color: #30323d;
+}
+
+/* Add a background color to the active link */
+.navbar a.active {
+  background-color: #e90000;
+  color: #ebe9e9;
+}
+
+/* Hide the link that should open and close the navbar on small screens */
+.navbar .icon {
+    display: none;
+}
+
+
+@media(max-width: 768px) {
+  
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
+.navbar a:not(:first-child) {display: none;}
+    .navbar a.icon {
+    float: right;
+    display: flex;
+    /*padding-right: 40px;*/
+    }
+
+    .navbar.responsive a.icon {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+    }
+    .navbar.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+   }
 }
