--- a/css/main.css
+++ b/css/main.css
@@ -200,7 +200,7 @@ p, div li, .navbar {
 
 .pain-point-3 .support {
 	text-align: center;
-	padding: 5% 0;
+	padding: 0;
 }
 
 .quotes-1 {
@@ -222,7 +222,7 @@ nav {
 
 nav ul {
 	float: right;
-	margin-right: 70px;
+	margin-right: 30px;
 }
 
 nav ul li {
@@ -273,7 +273,7 @@ li {
   	color: #30323d;
   	text-align: center;
   	justify-content: center;
-  	padding: 14px 35px;
+  	padding: 14px 50px;
   	text-decoration: none;
   	font-size: 17px;
 }
@@ -355,7 +355,7 @@ li {
   		height: auto;
 	}
 	.takeaway {
-		max-height: 400px;
+		max-height: 450px;
 	}
 	.takeaway h3 {
 		font-size: 18px;
