--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body, html {
 	height: 100%;
 	background: #ebe9e9;
+	line-height: 1.5em;
 
 }
 
@@ -70,10 +71,11 @@ p, div li, .navbar {
 	width: 52px;
 }
 
+/*
 .icons .icon-1 {
 	padding-right: 20px;
 	padding-left: 50px;
-}
+}*/
 
 
 /*figcaption { 
@@ -151,7 +153,7 @@ p, div li, .navbar {
 }
 
 
-.intro div, .challenge-2 div, .pain-point-2 div, .design-2 div, .takeaway {
+.intro div, .challenge-2 div, .pain-point-2 div, .design-2 div, .takeaway div {
 	padding-left: 17%;
 	padding-right: 17%;
 }
@@ -200,7 +202,7 @@ p, div li, .navbar {
 
 .pain-point-3 .support {
 	text-align: center;
-	padding: 0;
+	padding: 10% 0;
 }
 
 .quotes-1 {
