--- a/css/hero.css
+++ b/css/hero.css
@@ -51,6 +51,140 @@ body, html {
 	min-height: 400px;
 }
 
+/* Bottom right text */
+.text-block {
+  position: absolute;
+  bottom: 30%;
+  left: 3%;
+  background-color: black;
+  opacity: 0.8;
+  color: #ebe9e9;
+  padding-left: 20px;
+  padding-right: 20px;
+  max-width: 30%;
+}
+
+.text {
+	padding: 5%;
+}
+
+.text p {
+	font-family: 'Volkhov', serif;
+}
+
+.text h1 {
+	font-size: 2.5em;
+}
+
+section {
+  position: relative;
+  width: 10%;
+  height: 10%;
+  float: right;
+}
+section::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  content: '';
+  width: 100%;
+  height: 80%;
+  /*background: -webkit-linear-gradient(top,rgba(0,0,0,0) 0,rgba(0,0,0,.8) 80%,rgba(0,0,0,.8) 100%);*/
+  /*background: linear-gradient(to bottom,rgba(0,0,0,0) 0,rgba(0,0,0,.8) 80%,rgba(0,0,0,.8) 100%);*/
+}
+
+.demo a {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  z-index: 2;
+  display: inline-block;
+  -webkit-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  color: #ebe9e9;
+  font : normal 400 20px/1 'Josefin Sans', sans-serif;
+  letter-spacing: .1em;
+  text-decoration: none;
+  transition: opacity .3s;
+}
+.demo a:hover {
+  opacity: .5;
+}
+
+#section03 a {
+  padding-top: 60px;
+}
+#section03 a span {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 46px;
+  height: 46px;
+  margin-left: -23px;
+  border: 1px solid #ebe9e9;
+  border-radius: 100%;
+  box-sizing: border-box;
+}
+#section03 a span::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  content: '';
+  width: 16px;
+  height: 16px;
+  margin: -12px 0 0 -8px;
+  border-left: 1px solid #ebe9e9;
+  border-bottom: 1px solid #ebe9e9;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  box-sizing: border-box;
+}
+#section03 a span::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  content: '';
+  width: 44px;
+  height: 44px;
+  box-shadow: 0 0 0 0 rgba(255,255,255,.1);
+  border-radius: 100%;
+  opacity: 0;
+  -webkit-animation: sdb03 3s infinite;
+  animation: sdb03 3s infinite;
+  box-sizing: border-box;
+}
+@-webkit-keyframes sdb03 {
+  0% {
+    opacity: 0;
+  }
+  30% {
+    opacity: 1;
+  }
+  60% {
+    box-shadow: 0 0 0 60px rgba(255,255,255,.1);
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes sdb03 {
+  0% {
+    opacity: 0;
+  }
+  30% {
+    opacity: 1;
+  }
+  60% {
+    box-shadow: 0 0 0 60px rgba(255,255,255,.1);
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 
 .section {
 	text-align: center;
@@ -127,7 +261,7 @@ nav ul li {
 
 nav a {
 	text-decoration: none;
-	color: #e90000;
+	color: #ebe9e9;
 	font-size: 18px;
 }
 
@@ -139,49 +273,60 @@ nav a {
 	color: #30323d;
 }
 
+.navbar {
+	background-color: #ebe9e9;
+	overflow: hidden;
+	position: relative;
+	bottom: 0;
+}
+
+.navbar {
+  overflow: hidden;
+  background-color: #ebe9e9;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.navbar a {
+  color: #30323d;
+  text-align: center;
+  display: inline-block;
+  padding: 14px 60px;
+  text-decoration: none;
+  font-size: 17px;
+  margin: 0px auto;
+}
+
+.navbar a:hover {
+  background: #ddd;
+  color: #30323d;
+}
+
+/* Add a background color to the active link */
+.navbar a.active {
+	background-color: #e90000;
+	color: #ebe9e9;
+}
+
+/* Hide the link that should open and close the navbar on small screens */
+.navbar .icon {
+  	display: none;
+}
+
 i {
 	padding: 0 20px;
-	color: #30323d;
+	color: #ebe9e9;
 }
 
 i a {
 	text-decoration: none;
 }
 
-.navbar {
-  background-color: #30323d;
-  overflow: hidden;
-  position: relative;
-  bottom: 0;
-}
-
-.navbar a {
-    float: left;
-    display: block;
-    color: #ebe9e9;
-    text-align: center;
-    justify-content: center;
-    padding: 14px 97px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-/* Change the color of links on hover */
-.navbar a:hover {
-  background-color: #ddd;
-  color: #30323d;
-}
-
-/* Add a background color to the active link */
-.navbar a.active {
-  background-color: #e90000;
-  color: #ebe9e9;
-}
-
-/* Hide the link that should open and close the navbar on small screens */
-.navbar .icon {
-    display: none;
-}
 
 
 
@@ -209,29 +354,56 @@ i a {
 		display: none;
 	}
 
+	.ptext {
+	position: absolute;
+	top: 50%;
+	width: 100%;
+	text-align: center;
+	color: #EBE9E9;
+	font-size: 12px;
+	letter-spacing: 4px;
+	text-transform: uppercase;
+}
+
 	.about-text {
 	flex-basis: 150%;
 	padding-left: 20px;
 	font-size: 14px;
 	}
 
+	.text-block {
+  position: absolute;
+  bottom: 30%;
+  left: 3%;
+  background-color: black;
+  opacity: 0.8;
+  color: #ebe9e9;
+  padding-left: 20px;
+  padding-right: 20px;
+  max-width: 100%;
+}
+
+	.text h1 {
+	font-size: 2em;
+}
+
 	.navbar a:not(:first-child) {display: none;}
-    .navbar a.icon {
+  	.navbar a.icon {
     float: right;
     display: flex;
-    padding-right: 40px;
-    }
+    /*padding-right: 40px;*/
+  	}
 
-    .navbar.responsive a.icon {
-      position: absolute;
-      right: 0;
-      bottom: 0;
-    }
-    .navbar.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-   }
+  	.navbar.responsive a.icon {
+    	position: absolute;
+    	right: 0;
+    	bottom: 0;
+  	}
+  	.navbar.responsive a {
+    	float: none;
+    	display: block;
+    	text-align: left;
+ 	 }
 }
 
 
