--- a/css/main.css
+++ b/css/main.css
@@ -5,9 +5,19 @@ body, html {
 
 }
 
-/*div {
-	border: 1px solid #000000;
-}*/
+div {
+	/*border: 1px solid #000000;*/
+	height: auto;
+}
+
+.choisi-content-1 {
+	height: 25%;
+}
+
+.line {
+	border: 1px dashed #A28489;
+	height: 0;
+}
 
 
 header {
@@ -28,6 +38,18 @@ header {
   	height: 70%;
   }
 
+.choisi {
+	background-image: url("../images/choisi-header-mockup.png");
+	background-position: center;
+  	background-repeat: no-repeat;
+  	background-size: cover;
+  	position: relative;
+  	height: 95%;
+  }
+
+
+
+
 main {
 	padding: 30px;
 }
@@ -42,6 +64,116 @@ p, div li, .navbar {
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 300;
 }
+
+section {
+  position: relative;
+  width: 10%;
+  height: 10%;
+  float: right;
+}
+section::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  content: '';
+  width: 100%;
+  height: 80%;
+  /*background: -webkit-linear-gradient(top,rgba(0,0,0,0) 0,rgba(0,0,0,.8) 80%,rgba(0,0,0,.8) 100%);*/
+  /*background: linear-gradient(to bottom,rgba(0,0,0,0) 0,rgba(0,0,0,.8) 80%,rgba(0,0,0,.8) 100%);*/
+}
+
+.demo a {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  z-index: 2;
+  display: inline-block;
+  -webkit-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  color: #000000;
+  font : normal 400 20px/1 'Josefin Sans', sans-serif;
+  letter-spacing: .1em;
+  text-decoration: none;
+  transition: opacity .3s;
+}
+.demo a:hover {
+  opacity: .5;
+}
+
+#section03 a {
+  padding-top: 60px;
+}
+#section03 a span {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 46px;
+  height: 46px;
+  margin-left: -23px;
+  border: 1px solid #000000;
+  border-radius: 100%;
+  box-sizing: border-box;
+}
+#section03 a span::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  content: '';
+  width: 16px;
+  height: 16px;
+  margin: -12px 0 0 -8px;
+  border-left: 1px solid #000000;
+  border-bottom: 1px solid #000000;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  box-sizing: border-box;
+}
+#section03 a span::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  content: '';
+  width: 44px;
+  height: 44px;
+  box-shadow: 0 0 0 0 rgba(255,255,255,.1);
+  border-radius: 100%;
+  opacity: 0;
+  -webkit-animation: sdb03 3s infinite;
+  animation: sdb03 3s infinite;
+  box-sizing: border-box;
+}
+@-webkit-keyframes sdb03 {
+  0% {
+    opacity: 0;
+  }
+  30% {
+    opacity: 1;
+  }
+  60% {
+    box-shadow: 0 0 0 60px rgba(255,255,255,.1);
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes sdb03 {
+  0% {
+    opacity: 0;
+  }
+  30% {
+    opacity: 1;
+  }
+  60% {
+    box-shadow: 0 0 0 60px rgba(255,255,255,.1);
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 
 
 .challenge .support img, .pain-point-2 .support img {
@@ -70,6 +202,7 @@ p, div li, .navbar {
 	height: 52px;
 	width: 52px;
 }
+
 
 /*
 .icons .icon-1 {
@@ -123,7 +256,7 @@ p, div li, .navbar {
 }
 
 
-.container-1, .challenge, .challenge-3, .pain-point, .pain-point-3, .design-3, .design-4, .design-5 {
+.container-1, .challenge, .challenge-3, .pain-point, .pain-point-3, .design-3, .design-4, .design-5, .overview, .choisi-problem, .container {
 	display: flex;
 }
 
@@ -135,8 +268,75 @@ p, div li, .navbar {
 	flex-basis: 50%;
 }
 
+.choisi-content {
+	flex-basis: 100%;
+}
+
+.left-content {
+	flex-basis: 70%;
+}
+
+.right-content {
+	flex-basis: 30%;
+}
+
+.img-block-1 {
+	flex-basis: 25%;
+}
+.img-block-2 {
+	flex-basis: 25%;
+}
+.img-block-3 {
+	flex-basis: 25%;
+}
+.img-block-4 {
+	flex-basis: 25%;
+}
+
+.design-img-block-1 {
+	flex-basis: 25%;
+}
+.design-img-block-2 {
+	flex-basis: 25%;
+}
+.design-img-block-3 {
+	flex-basis: 25%;
+}
+.design-img-block-4 {
+	flex-basis: 25%;
+}
+
+.half-img {
+	flex-basis: 50%;
+}
+
+.third-img {
+	flex-basis: 33%;
+}
+
+.design-content {
+	flex-basis: 30%;
+}
+.design-img {
+	flex-basis: 70%;
+}
+
+
+.headers {
+	width: 100%;
+}
+
+.container {
+	width: 100%;
+}
+
 .intro, .design, .takeaway, .container-3 {
 	background: #30323D;
+	color: #ebe9e9;
+}
+
+.choisi-takeaway {
+	background: #A28489;
 	color: #ebe9e9;
 }
 
@@ -152,14 +352,44 @@ p, div li, .navbar {
 	flex-basis: 50%;
 }
 
+figcaption {
+	text-align: center;
+}
 
-.intro div, .challenge-2 div, .pain-point-2 div, .design-2 div, .takeaway div {
+
+.intro div, .challenge-2 div, .pain-point-2 div, .design-2 div, .takeaway div, .choisi-takeaway div {
 	padding-left: 17%;
 	padding-right: 17%;
 }
 
-.challenge-2, .pain-point, .pain-point-2 div, .icons, .design-2, .intro, .prototype, .takeaway, .design-3, .design-4, .design-5 {
+.takeaway div {
+	padding-top: 2%;
+	padding-bottom: 2%;
+}
+
+.challenge-2, .pain-point, .pain-point-2 div, .icons, .design-2, .intro, .prototype, .takeaway, .design-3, .design-4, .design-5, .choisi-content {
 	text-align: center;
+}
+
+.choisi-content {
+	padding: 2.5% 20%;
+}
+
+.left-content, .right-content, .design-content {
+	padding: 2.5% 10%;
+}
+
+.right-content-1, .img-block-1, .img-block-2, .img-block-3, .img-block-4, .half-img, .third-img {
+	padding: 2.5% 5%;
+}
+
+.design-img-block-1, .design-img-block-2, .design-img-block-3, .design-img-block-4 {
+	padding: 1% 1%;
+}
+
+
+.choisi-focus, .choisi-matters, .choisi-users, .headers, .choisi-design, .choisi-resolution {
+	padding-top: 7%;
 }
 
 .container-2 .icons {
@@ -248,8 +478,13 @@ li {
 	list-style-type: none;
 }
 
-.bullet li {
+.bullet li, .choisi-list li {
 	list-style-type: square;
+}
+
+.choisi-list li {
+	color: #a28489;
+	font-weight: 700;
 }
 
 .takeaway {
@@ -262,28 +497,32 @@ li {
 }
 
 
+
 .navbar {
-	background-color: #ebe9e9;
-	overflow: hidden;
-	position: relative;
-	bottom: 0;
+  overflow: hidden;
+  background-color: #ebe9e9;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
 
 .navbar a {
-	float: left;
-  	display: block;
-  	color: #30323d;
-  	text-align: center;
-  	justify-content: center;
-  	padding: 14px 75px;
-  	text-decoration: none;
-  	font-size: 17px;
+  color: #30323d;
+  text-align: center;
+  display: inline-block;
+  padding: 14px 60px;
+  text-decoration: none;
+  font-size: 17px;
+  margin: 0px auto;
 }
 
-/* Change the color of links on hover */
 .navbar a:hover {
-	background-color: #ddd;
-	color: #30323d;
+  background: #ddd;
+  color: #30323d;
 }
 
 /* Add a background color to the active link */
@@ -324,9 +563,15 @@ i a {
 
 
 @media(max-width: 768px){
-	.container-1, .icons, .content, .support, .challenge-3, .pain-point-3, .design-3, .design-4, .design-5 {
+	.container-1, .icons, .content, .support, .challenge-3, .pain-point-3, .design-3, .design-4, .design-5, .overview, .container {
 		display: flex;
 		flex-direction: column;
+	}
+
+	.choisi {
+	background-image: url('../images/choisi-product-detail.png');
+	min-height: auto;
+	width: auto;
 	}
 
 	.navbar a:not(:first-child) {display: none;}
@@ -342,10 +587,14 @@ i a {
     	bottom: 0;
   	}
   	.navbar.responsive a {
-    	float: none;
+    	float: left;
     	display: block;
-    	text-align: left;
  	 }
+
+ 	/* .navbar a {
+ 	 	text-align: center;
+    	justify-content: center;
+ 	 }*/
 
 	.challenge-3 img {
 		justify-content: center;
@@ -373,9 +622,13 @@ i a {
 		font-size: 12px;
 	}
 
-	header img, header nav, .linus img, .linus nav {
+	header img, header nav, .linus img, .linus nav, .choisi img, .choisi nav {
 		display: none;
 	}
+
+	.modal-content {
+    width: 100%;
+  }
 
 }
 
