--- a/css/main.css
+++ b/css/main.css
@@ -577,20 +577,28 @@ i a {
 	.navbar a:not(:first-child) {display: none;}
   	.navbar a.icon {
     float: right;
-    display: flex;
-    /*padding-right: 40px;*/
-  	}
-
-  	.navbar.responsive a.icon {
-    	position: absolute;
-    	right: 0;
-    	bottom: 0;
+	display: flex;
+	align-self: flex-end;
+	flex-grow: 0;
   	}
   	.navbar.responsive a {
     	float: none;
     	display: block;
-    	text-align: left;
- 	 }
+		text-align: left;
+	  }
+	.navbar a {
+		padding: 16px 20px;
+	}
+	.navbar .navbar-inner {
+		flex: 1;
+		display: flex;
+		flex-wrap: wrap;
+	}
+	.navbar .navbar-inner a {
+		flex: 1;
+		margin: 0;
+		text-align: left;
+	}
 
 	.challenge-3 img {
 		justify-content: center;
