--- a/css/hero.css
+++ b/css/hero.css
@@ -1,5 +1,5 @@
 body, html {
-	height: 100;
+	height: 100%;
 	margin: 0;
 	font-size: 16px;
 	font-family: 'Montserrat', sans-serif;
@@ -387,23 +387,38 @@ i a {
 	font-size: 2em;
 }
 
-	.navbar a:not(:first-child) {display: none;}
-  	.navbar a.icon {
-    float: right;
-    display: flex;
-    /*padding-right: 40px;*/
-  	}
 
-  	.navbar.responsive a.icon {
-    	position: absolute;
-    	right: 0;
-    	bottom: 0;
-  	}
-  	.navbar.responsive a {
-    	float: none;
-    	display: block;
-    	text-align: left;
- 	 }
+  .navbar a:not(:first-child) {display: none;}
+    .navbar a.icon {
+    float: right;
+  display: flex;
+  align-self: flex-end;
+  flex-grow: 0;
+  }
+  .navbar {
+    max-width: 500px;
+    /* Use this 300px value to be however big you want the nav area to be */
+    margin: 0 auto;
+
+  }  
+    .navbar.responsive a {
+      float: none;
+      display: block;
+    text-align: left;
+    }
+  .navbar a {
+    padding: 16px 20px;
+  }
+  .navbar .navbar-inner {
+    flex: 1;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .navbar .navbar-inner a {
+    width: 100%;
+    margin: 0;
+    text-align: left;
+  }
 }
 
 
